@@ -1,3 +1,8 @@
+Mon Mar  9 10:02:15 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* re.c (match_check): check if MatchData is initialized.
+	  [ruby-core:18749]
+
 Mon Mar  9 09:56:34 2009  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* lib/rexml/rexml.rb: incremented Ruby::VERSION.  Thanks, Jeremy
